--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,6 @@ section.light h2 {
   color: #bfa45b;
 }
 
-/* -------- MODAL SERVICIOS -------- */
 .modal-servicio {
   display: none; /* IMPORTANTE: inicia oculto */
   position: fixed;
@@ -208,9 +207,8 @@ section.light h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6); /* Fondo oscuro */
-  backdrop-filter: blur(4px); /* efeco bonito */
-  display: flex;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(4px);
   justify-content: center;
   align-items: center;
   z-index: 9999;
@@ -351,6 +349,7 @@ footer {
   display: block;
   visibility: hidden;
 }
+
 
 
 
